--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "js-base64": "^3.7.2",
     "next": "12.3.1",
     "next-api-middleware": "^2.0.1",
+    "nextjs-progressbar": "^0.0.14",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5",
+    "tinycolor2": "^1.4.2",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@types/tinycolor2": "^1.4.3",
     "@vitest/coverage-c8": "^0.23.4",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
