--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.3.4",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "axios": "^0.27.2",
+    "animate.css": "^4.1.1",
+    "axios": "^1.1.2",
     "class-validator": "^0.13.2",
     "firebase": "^9.10.0",
     "firebase-admin": "^11.0.1",
-    "framer-motion": "^6",
     "iron-session": "^6.2.1",
     "js-base64": "^3.7.2",
     "next": "12.3.1",
@@ -27,6 +24,7 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.5",
     "tinycolor2": "^1.4.2",
     "zustand": "^4.1.1"
