--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-base64": "^3.7.2",
     "next": "12.3.1",
     "next-api-middleware": "^2.0.1",
+    "nextjs-breadcrumbs": "^1.1.9",
     "nextjs-progressbar": "^0.0.14",
     "nookies": "^2.5.2",
     "react": "18.2.0",
