--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "4.4.0",
     "animate.css": "^4.1.1",
     "axios": "^1.1.2",
+    "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
-    "firebase": "^9.10.0",
-    "firebase-admin": "^11.0.1",
     "iron-session": "^6.2.1",
     "js-base64": "^3.7.2",
     "next": "12.3.1",
@@ -23,6 +26,7 @@
     "nextjs-breadcrumbs": "^1.1.9",
     "nextjs-progressbar": "^0.0.14",
     "nookies": "^2.5.2",
+    "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -31,7 +35,9 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.7.20",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -41,6 +47,7 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.3",
     "vitest": "^0.23.4"
   }
